Fix word wrap Day-39-JS

--- a/Day-39-JS/src/assets/CSS/style.css
+++ b/Day-39-JS/src/assets/CSS/style.css
@@ -100,6 +100,8 @@ button {
 }
 
 .todo .name-task {
+    word-wrap: break-word;
+    width: 100%;
     font-size: 1.6rem;
     font-weight: 600;
     color: rgb(66, 66, 66);
